--- a/conf/high_risk_system.conf.dist
+++ b/conf/high_risk_system.conf.dist
@@ -5,13 +5,13 @@
 [worldserver]
 
 ########################################
-# My module configuration
+# High Risk System
 ########################################
 #
-#    MyModule.Enable
-#        Description: Enable my module and print "Hello World" message at server start
+#    high_risk_system.Enable
+#        Description: Enable/Disable high risk systems
 #        Default:     0 - Disabled
 #                     1 - Enabled
 #
 
-MyModule.Enable = 0
+high_risk_system.Enable = 0
